tests/failing/missing_field_annotation_test.stderr
error: Field must have either #[pk] or #[column(...)] annotation
 --> tests/failing/missing_field_annotation_test.rs:7:5
  |
7 |     name: String,
  |     ^^^^
